--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -40,8 +40,8 @@
     justify-content: space-between;
 }
 .navbar__logo img {
-    width: 200px;
-    height: 48px;
+    width: 216px;
+    height: 52px;
     margin-top: 30px;
     margin-left: 20px;
     cursor: pointer;
@@ -90,7 +90,7 @@
 }
 
 .header__content {
-    margin-top: 18px;
+    margin-top: 15px;
     background: #f5f8ff;
     padding: 40px;
     display: flex;
@@ -139,16 +139,22 @@
     display: none;
 }
 /* CSS for Pick your plans section */
+.pick-your-plan {
+    max-width: 1406px;
+    margin: auto;
+}
 .content__pick-your-plan {
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 67px;
 }
 .sub-title {
     font-family: "DMSerifText";
     font-size: 48px;
     line-height: 56px;
     text-align: center;
+    margin-top: 18px;
 }
+
 .underline {
     text-align: center;
     margin-top: 5px;
@@ -211,8 +217,7 @@
 }
 /* CSS for how it works section */
 .content__how-it-works {
-    /* margin-top: 50px; */
-    padding-top: 50px;
+    padding-top: 100px;
     margin: auto;
     max-width: 950px;
 }
@@ -251,7 +256,7 @@
     max-width: 94%;
 }
 .how-it-works__btn {
-    margin: 90px 0px 100px 0px;
+    margin: 97px 7px 136px 0px;
     text-align: center;
 }
 .how-it-works__btn button {
@@ -281,6 +286,7 @@
     line-height: 56px;
     text-align: center;
     padding: 30px;
+    margin-top: 50px;
 }
 .list__social-post {
     display: flex;
@@ -303,7 +309,7 @@
     width: 98%;
 }
 .social-post__btn {
-    margin: 90px 0px 100px 0px;
+    margin: 102px 0px 71px 0px;
     text-align: center;
 }
 .social-post__btn button {
@@ -318,7 +324,7 @@
     border: 4px solid #ef8094;
     box-sizing: border-box;
     border-radius: 300px;
-    width: 284px;
+    width: 310px;
     height: 61px;
     cursor: pointer;
     color: #fff;
@@ -341,8 +347,8 @@
     width: 330px;
 }
 .top-side__logo img {
-    width: 140px;
-    height: 40px;
+    width: 132px;
+    height: 37px;
 }
 .top-side__icon {
     width: 300px;
@@ -351,8 +357,8 @@
     display: none;
 }
 .top-side__icon img {
-    margin-right: 25px;
-    height: 35px;
+    margin-right: 30px;
+    height: 27px;
     cursor: pointer;
 }
 .footer-container__center-site {
@@ -585,6 +591,9 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+
+        margin-top: 36px;
+        margin-left: -12px;
     }
 
     .header__content--text {
@@ -610,14 +619,14 @@
         display: block;
         width: 900px;
         height: 700px;
-        right: -128px;
+        right: -72px;
         position: absolute;
-        top: 3px;
+        top: -2px;
     }
 
     /* Pick your plans */
     .main__list--item {
-        width: 508px;
+        width: 575px;
         height: 285px;
         display: flex;
         flex-direction: column;
@@ -630,20 +639,25 @@
         font-size: 40px;
         line-height: 57px;
     }
+    .description {
+        margin-top: 49px;
+        font-size: 18px;
+    }
     /*How it works  */
     .main__how-it-works {
         align-items: center;
     }
     .main__how-it-works--img {
-        margin-right: 30px;
+        margin-right: 11px;
+        margin-top: -42px;
     }
     .img__pinkbox2 {
         width: 800px;
     }
     .main__how-it-works--title {
         max-width: none;
-        margin-left: 18px;
-        margin-top: 82px;
+        margin-left: 32px;
+        margin-top: 25px;
     }
     .main__how-it-works--title h3 {
         width: 51%;
@@ -678,26 +692,39 @@
         font-size: 26px;
     }
     /* footer */
+    .footer {
+        margin-top: 33px;
+        margin-left: 69px;
+    }
+    .footer-topic {
+        width: 1379px;
+        height: 481px;
+    }
     .footer-container {
-        padding: 30px;
+        /* padding-left: 70px; */
     }
     .footer-container__top-side {
         justify-content: space-between;
+        margin-top: 11px;
     }
 
     .top-side__icon {
-        width: 222px;
+        width: 202px;
     }
     .footer-container__center-site {
         flex-direction: row;
         justify-content: space-between;
+        margin-top: 33px;
     }
     .center-site {
         margin-left: 0px;
         width: 555px;
     }
     .center-site__upbox {
-        width: 40%;
+        width: 36%;
+    }
+    .center-site__upbox h3 {
+        font-size: 20px;
     }
     .footer-container__bottom-side {
         display: flex;
