--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -568,9 +568,7 @@
     .footer {
         margin: 35px;
     }
-    .footer-container {
-        /* max-width: 688px; */
-    }
+
     .footer-container__top-side {
         justify-content: center;
         margin-left: 36px;
@@ -612,6 +610,17 @@
 @media only screen and (min-width: 1024px) {
     .navbar__logo img {
         margin-left: 0px;
+        width: 216px;
+        height: 52px;
+    }
+    .navbar__list {
+        margin-right: 32px;
+    }
+    .navbar__list .navbar__list-item a {
+        font-size: 14px;
+    }
+    .navbar__btn button {
+        font-size: 14px;
     }
     .header__content {
         padding-bottom: 43px;
@@ -629,9 +638,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-
         margin-top: 36px;
-        margin-left: -12px;
     }
 
     .header__content--text {
@@ -645,6 +652,7 @@
         max-width: none;
         width: 468px;
         font-size: 18px;
+        margin-top: 20px;
     }
     .box__image {
         width: 850px;
@@ -663,12 +671,23 @@
     }
 
     /* Pick your plans */
+    .content__pick-your-plan {
+        margin-top: 70px;
+    }
+    .content__main-list {
+        margin-top: 46px;
+    }
     .main__list--item {
         width: 575px;
         height: 285px;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .main__list--item button {
+        font-size: 16px;
+        width: 200px;
+        height: 61px;
     }
     .list__item-monthly {
         font-size: 36px;
@@ -717,10 +736,17 @@
     .content__main .main__how-it-works:nth-child(3) .main__how-it-works--title p {
         width: 75%;
     }
+    .how-it-works__btn {
+        margin-top: 93px;
+    }
     /* Social post */
+    .content__social-post h2 {
+        margin-top: 50px;
+    }
     .list__social-post {
         flex-wrap: nowrap;
         justify-content: center;
+        margin-top: 20px;
     }
     .main__social-post {
         margin-left: 30px;
@@ -729,17 +755,20 @@
         width: 323px;
         font-size: 26px;
     }
+    .social-post__btn {
+        margin: 18px 0px 72px 0px;
+    }
     /* footer */
     .footer {
-        margin-top: 33px;
-        margin-left: 69px;
+        margin-top: 14px;
+        margin-left: 45px;
     }
     .footer-topic {
         width: 1379px;
         height: 481px;
     }
-    .footer-container {
-        /* padding-left: 70px; */
+    .footer-container__top-side {
+        margin-left: 0px;
     }
     .footer-container__top-side {
         justify-content: space-between;
